@@ -1,3 +1,9 @@
+Mon Dec  9 18:50:43 2013  Aman Gupta <ruby@tmm1.net>
+
+	* hash.c (rb_hash_replace): fix segv on `{}.replace({})` introduced
+	  in r44060 [Bug #9230] [ruby-core:58991]
+	* test/ruby/test_hash.rb: regression test for above
+
 Mon Dec  9 18:10:10 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* vm.c (vm_stat): renamed from ruby_vm_stat.
